# github-monitor

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  docker-compose.yml  package.json  pyproject.toml
assets/css/: main.css
assets/js/: index.js  router.js
assets/js/actions/: ActionTypes.js  CommitActions.js
assets/js/api/: CommitAPI.js
assets/js/components/: Pagination.js  RepoCreateForm.js  SideBar.js
assets/js/components/CommitList/: index.js
assets/js/containers/: CommitListContainer.js  RepoCreateContainer.js
assets/js/reducers/: CommitReducer.js  Index.js
common/integrations/: github.py
common/tests/: test_github.py
githubmonitor/: settings.py
repositories/: serializers.py  tasks.py  urls.py  views.py
repositories/tests/: conftest.py  test_serializers.py  test_tasks.py  test_views.py
