[tool.poetry]
name = "github-monitor"
version = "0.1.0"
description = ""
authors = ["Philippe Gonzaga <francisco.philippe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.2.7"
dj-database-url = "0.5.0"
Django = "3.0.7"
djangorestframework = "3.11.0"
django-webpack-loader = "0.7.0"
psycopg2-binary = "2.8.5"
python-decouple = "3.3"
pytz = "2020.1"
whitenoise = "5.1.0"
redis = "3.5.3"
requests = "2.24.0"
social-auth-app-django = "3.4.0"
social-auth-core = "3.3.3"
celery = "^5.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pre-commit = "^2.15.0"
isort = "^5.10.1"
prospector = "^1.5.2"
django-extensions = "^3.1.5"
ipython = "^7.30.0"
celery = {extras = ["pytest"], version = "^5.2.1"}
model-bakery = "^1.3.3"
pytest-testdox = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "githubmonitor.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--testdox -x -p no:warnings --strict-markers --no-migrations"
